minor color change to fix contrast issue"

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -139,7 +139,7 @@ body {
 }
 
 .collapsible-header:hover {
-    background-color: #f6cd89 !important;
+    background-color: #9e6a9d !important;
     color: black;
 }
 
@@ -718,7 +718,7 @@ footer {
 }
 
 #my-projects-title {
-    padding-top: 50px;
+    padding-top: 20px;
 }
 
 #project-username-div {
@@ -738,8 +738,8 @@ footer {
     border-radius: 5px;
     color: white;
     background-color: #583957 !important;
-    padding-bottom: 5px;
-    padding-top: 9px;
+    padding-bottom: 10px;
+    padding-top: 15px;
 }
 
 #my-projects-panel .row {
@@ -1157,7 +1157,7 @@ footer {
 }
 
 #project-hub-member-username h4:hover {
-    color: white !important;
+    color: grey !important;
 }
 
 #convo-wrapper span {
@@ -1316,6 +1316,13 @@ footer {
     margin-top: 0;
 }
 
+.remove-from-project-hub{
+    color: #eed202 !important;
+}
+.remove-from-project-hub:hover{
+    color: white !important;
+}
+
 /* settings.html */
 
 #settings-bg-image {
@@ -1426,7 +1433,6 @@ footer {
 
     #user-search-input {
         color: black;
-        padding-left: 5px;
     }
 
     #dropdown-notifications-side {
